fix: fix last details
Cross origin images were not showing.

The database client didn't have the right text encoding.

Posts were not showing line feeds in their messages.

--- a/frontend/src/features/posts/Posts/Post.module.css
+++ b/frontend/src/features/posts/Posts/Post.module.css
@@ -111,6 +111,8 @@
 
     .message {
         composes: body-medium from '../../../assets/styles/patterns/typography.module.css';
+
+        white-space: pre-wrap;
     }
 
     .image {
